err/moztest.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mozfile'...
Compiling './lib/python3.5/site-packages/mozfile/mozfile.py'...
***   File "./lib/python3.5/site-packages/mozfile/mozfile.py", line 57
    print "src: %s" % src
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mozfile-1.2.egg-info'...
Listing './lib/python3.5/site-packages/mozinfo'...
Compiling './lib/python3.5/site-packages/mozinfo/mozinfo.py'...
***   File "./lib/python3.5/site-packages/mozinfo/mozinfo.py", line 290
    print '%s choices: %s' % (key, ' '.join([str(choice)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mozinfo-0.10.egg-info'...
Listing './lib/python3.5/site-packages/moztest'...
Listing './lib/python3.5/site-packages/moztest/adapters'...
Listing './lib/python3.5/site-packages/moztest/output'...
Listing './lib/python3.5/site-packages/moztest-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
